[tool.poetry]
name = "clickable-ansible"
version = "0.1.0"
description = ""
authors = ["Laurent Almeras <laurent.almeras@kobalt.fr>"]
packages = [ { include = "clickable_ansible" } ]

[tool.poetry.dependencies]
clickable = { git = "https://github.com/lalmeras/clickable.git", branch = "ft-ansible" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


